Fixed the invisible question number bug

--- a/static/styles.css
+++ b/static/styles.css
@@ -98,7 +98,7 @@ body {
 }
 
 #size-amount{
-  width: 46px;
+  width: 76px;
 }
 
 h1 {
